# drf-jwt-2fa

./: .coveragerc  .gitignore  .travis.yml  AGENTS.md  ChangeLog.rst  LICENSE  README.rst  check-and-test  check-text-docs  conftest.py  dev_settings.py  dev_urls.py  lint  manage.py  pyproject.toml  render-text-docs  requirements-dev.txt  requirements-style.txt  requirements-test.txt  setup.cfg  setup.py  test-whole-flow  test_deploy_settings.py  test_settings.py  tox.ini
.github/workflows/: main.yaml  release.yaml
drf_jwt_2fa/: __init__.py  _type_checking.py  admin.py  apps.py  authentication.py  enrollment_token.py  exceptions.py  getters.py  models.py  sending.py  serializers.py  serializers_2fa_method.py  settings.py  throttling.py  token_manager.py  totp.py  totp_encryption.py  totp_serializers.py  urls.py  utils.py  views.py
drf_jwt_2fa/migrations/: 0001_initial.py
drf_jwt_2fa/tests/: conftest.py  factories.py  test_2fa_method.py  test_admin.py  test_endpoints.py  test_enrollment_token.py  test_models.py  test_settings.py  test_throttling.py  test_token_manager.py  test_totp.py  test_totp_encryption.py  test_totp_enrollment.py  test_type_checking.py  test_utils.py  utils.py
