[project]
name = "drf-jwt-2fa"
version = "0.4.0"
description = "Django Rest Framework JWT 2FA"
readme = "README.rst"
keywords = [
    "Authentication",
    "Two Factor",
    "Django Rest Framework",
    "JSON Web Token",
]
authors = [
    {name = "Tuomas Suutari", email = "tuomas@nepnep.net"},
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
requires-python = ">=3.10"
dependencies = [
    "django>2",
    "djangorestframework>=3.0",
    "drf-jwt>=1.19.2",
]

[project.urls]
homepage = "https://github.com/suutari/drf-jwt-2fa"

[dependency-groups]
dev = [
    "flake8>=3.9.2",
    "flake8-isort>=4.2.0",
    "flake8-print>=3.1.4",
    "freezegun>=1.1.0",
    "mock>=3.0.5",
    "pep8-naming>=0.13.1",
    "pytest>=6.1.2",
    "pytest-cov>=2.12.1",
    "pytest-django>=4.5.2",
    "tox>=3.28.0",
    "tox-uv-bare>=1.33.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_settings"
pythonpath = "."
