[project]
name = "drf-jwt-2fa"
version = "1.0.0"
description = "Django Rest Framework JWT 2FA"
readme = "README.rst"
keywords = [
    "Authentication",
    "Two Factor",
    "Django Rest Framework",
    "JSON Web Token",
]
authors = [
    {name = "Tuomas Suutari", email = "tuomas@nepnep.net"},
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
requires-python = ">=3.10"
dependencies = [
    "django>2",
    "djangorestframework>=3.0",
    "djangorestframework-simplejwt>=5.1",
]

[project.urls]
homepage = "https://github.com/suutari/drf-jwt-2fa"

[dependency-groups]
dev = [
    "django-stubs>=6.0.2",
    "djangorestframework-stubs>=3.16.9",
    "freezegun>=1.1.0",
    "mock>=3.0.5",
    "mypy>=1.20.1",
    "pytest>=6.1.2",
    "pytest-cov>=2.12.1",
    "pytest-django>=4.5.2",
    "ruff>=0.15.10",
    "tox>=3.28.0",
    "tox-uv-bare>=1.33.4",
]

[tool.pytest]
strict = true
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "test_settings"
addopts = ["--doctest-modules"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 1
show_missing = true
omit = ["conftest.py"]

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = [".tox", "dist", "venv", ".venv"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select = [
    "F", # linting failures (pyflakes)
    "W", # style warnings (pycodestyle)
    "E", # style errors (pycodestyle)
    "I", # import ordering (isort)
    "C", # code complexity (mccabe)
    "N", # naming conventions (pep8-naming)
    "UP", # upgrade to newer Python syntax (pyupgrade)
    "B", # likely bugs and design problems (flake8-bugbear)
    "DJ", # Django checks (flake8-django)
    "S", # security checks (flake8-bandit)
    "EXE", # executable permissions and shebangs (flake8-executable)
    "LOG", # usage of stdlib logging module (flake8-logging)
    "G", # logging format (flake8-logging-format)
    "FURB", # refurbishing and modernizing (refurb)
    "RUF", # Ruff-specific rules
    "TRY", # Exception Handling AntiPatterns (tryceratops)
    "T20", # print statements (flake8-print)
]
ignore = [
    "TRY003",  # Avoid specifying long messages outside of the exception class
]

[tool.ruff.lint.per-file-ignores]
"conftest.py" = ["S101"]  # Allow assert
"drf_jwt_2fa/tests/**/*.py" = ["S101", "S106", "S107", "S301"]
"test_settings.py" = ["S105"]  # SECRET_KEY

[tool.ruff.lint.isort]
known-first-party = ["drf_jwt_2fa"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.django-stubs]
django_settings_module = "test_settings"

[tool.mypy]
files = ["."]
plugins = ["mypy_django_plugin.main"]
