[metadata]
name = drf-jwt-2fa
version = 0.2.0
description = Django Rest Framework JWT 2FA
long_description = file: README.rst
keywords =  Authentication, Two Factor, Django Rest Framework, JSON Web Token
url = https://github.com/suutari/drf-jwt-2fa
maintainer = Tuomas Suutari
maintainer_email = tuomas@nepnep.net
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP :: Session

[options]
include_package_data = True
packages = find:
install_requires =
    django>=1.8
    djangorestframework>=3.0
    djangorestframework-jwt>=1.0

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* build dist venv test_data
DJANGO_SETTINGS_MODULE = test_settings

[flake8]
exclude = .tox,dist,venv
max-line-length = 79
max-complexity = 10

[isort]
multi_line_output = 4
skip = .tox,dist,venv
not_skip = __init__.py
known_first_party = drf_jwt_2fa
default_section = THIRDPARTY

[prequ]
annotate = yes
requirements-dev =
    -e .
    tox

requirements-style =
    flake8
    flake8-isort
    flake8-print
    pep8-naming

requirements-test =
    freezegun
    mock
    pytest
    pytest-cov
    pytest-django
    pytest-sugar
